# candybox

./: .commit_template  .gitignore  404.html  CNAME  LICENSE  README.md  buildResource.bat  changeColor.bat  index.html  makevenv.bat  pyproject.toml  requirements.txt  run.bat  serve.bat  sitemap.xml  test.py
About Extensions/qss/: index.html
About Extensions/qtCustom/: index.html
data/: ancient-gate-fill.json  bank-fill.json  building-3-fill.json  building-4-fill.json  building-4-line.json  building-fill.json  building-line.json  community-line.json  home-2-fill.json  home-2-line.json  home-4-line.json  home-5-line.json  home-7-fill.json  home-7-line.json  home-8-fill.json  home-8-line.json  home-gear-line.json  home-smile-fill.json  store-2-line.json  store-line.json
data/Buildings/: ancient-gate-fill.json  ancient-gate-line.json  ancient-pavilion-fill.json  ancient-pavilion-line.json  bank-fill.json  bank-line.json  building-2-fill.json  building-2-line.json  building-3-fill.json  building-3-line.json  building-4-fill.json  building-4-line.json  building-fill.json  building-line.json  community-fill.json  community-line.json  government-fill.json  government-line.json  home-2-fill.json  home-2-line.json  home-3-fill.json  home-3-line.json  home-4-fill.json  home-4-line.json  home-fill.json  (+29 more)
docs/: mkdocs.yml
en/: index.html
ja/: index.html
resource/: buildFont.bat  buildImage.bat  createQRCFont.PY  createQRCImage.PY  fontResource.qrc  imageResource.qrc
search/: search_index.json
src/: candybox.py  candyboxDelegator.py  candyboxModel.py  candyboxView.py
(+2303 files in other folders)
